# eclair

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ossar-analysis.yml
eclair/: __main__.py  api.py  cli.py  fsm.py  problem.py
eclair/templates/: py.tmpl
