[tool.black]
target-version = ["py38"]
skip-string-normalization = true

[tool.poetry]
name = "eclair"
version = "0.0.1"
description = "Project Euler CLI"
authors = ["Ivan Frolov <ivofrolov@fastmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
